--- a/scratch.html
+++ b/scratch.html
@@ -10,8 +10,8 @@
     <h1>Dune</h1>
     <!--This are my nav links, I'll want to reposition them later and style later-->
     <nav>
-    <a href="../startbootstrap-resume-gh-pages/index.html">Home Page</a>
-    <a href="../startbootstrap-resume-gh-pages/game.html">Game</a>
+    <a href="index.html">Home Page</a>
+    <a href="game.html">Game</a>
     </nav>
     <div class="header" id="top">
 <h2>My Love for Dune </h2>
