--- a/game.html
+++ b/game.html
@@ -8,15 +8,37 @@
       font-family: Arial, sans-serif;
       background-color: #8140ca;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
       height: 100vh;
-      flex-direction: column;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav {
+      width: 100%;
+      background-color: #5b2fa0;
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #d1c4f7;
     }
 
     h1 {
-      margin-bottom: 20px;
-      color: #333;
+      margin: 20px 0;
+      color: white;
+      font-size: 2rem;
     }
 
     #board {
@@ -45,6 +67,7 @@
     #status {
       margin-top: 20px;
       font-size: 1.2rem;
+      color: white;
     }
 
     #reset {
@@ -64,6 +87,11 @@
   </style>
 </head>
 <body>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="scratch.html">Dune</a>
+  </nav>
 
   <h1>Tic Tac Toe</h1>
   <div id="board"></div>
@@ -131,7 +159,7 @@
       if (gameActive) {
         currentPlayer = 'O';
         status.textContent = "Robot is thinking...";
-        setTimeout(robotMove, 500); // slight delay for realism
+        setTimeout(robotMove, 500);
       }
     }
 
